--- a/Readme
+++ b/Readme
@@ -1,4 +1,4 @@
-# VisualComputer
+# VisualComputer: This Project associated with Visual Computer Jounral Please add the DOI when utlizing it.  
 
 # Proposed Method for Diabetic Retinopathy Classification
 
