--- a/Readme
+++ b/Readme
@@ -137,3 +137,5 @@ More advanced augmentation techniques like rotation, zoom, and shift could be ad
 License
 This project is licensed under the github License - see the LICENSE file for details.
 
+Private-DS & Models: https://drive.google.com/drive/folders/1XOru5rVbH20aEDFweZaOoI9ug8TXxXjI?usp=sharing
+
